<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:scaleType="centerCrop"
	    android:id="@+id/imageView1" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginBottom="60dp" >
 
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
    
    <LinearLayout
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
		android:background="@drawable/item_background"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textStyle="bold"
            android:text="@string/name"/>
                
        <EditText
            android:id="@+id/titleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
		android:background="@drawable/item_background"
		android:layout_below="@id/name"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
        
        <TextView
			android:id="@+id/textView2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/name_description"
			android:textStyle="bold" />
                
        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine" />
        
    </LinearLayout> 
    
    <RelativeLayout
        android:id="@+id/coordinates"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/description"
		android:background="@drawable/item_background"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
        
        <TextView
			android:id="@+id/lat"
			android:layout_marginLeft="35dp"
			android:layout_alignParentLeft="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name_latitude"
			android:textStyle="bold" />
        
        <TextView
			android:id="@+id/latText"
			android:layout_marginLeft="35dp"
			android:layout_alignParentLeft="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/lat" />  
        
        <TextView
			android:id="@+id/longitude"
			android:layout_marginRight="35dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name_longitude"
			android:layout_alignParentRight="true"
			android:textStyle="bold" />
        
        <TextView
			android:id="@+id/longText"
			android:layout_marginRight="35dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_below="@id/longitude" />        
    
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinates"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/item_background"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:visibility="gone" >
        
        <Button
			android:id="@+id/photoButton"
			android:text="@string/name_button_add_photo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/tphoto"
			android:layout_marginTop="5dp"/>

        <ImageView
            android:id="@id/tphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />
        
    </RelativeLayout>
    </RelativeLayout> 
    </ScrollView> 
    
    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/buttonSetCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/name_button_place" />

        <Button
            android:id="@+id/buttonValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/name_button_validate" />


    </LinearLayout>
    

</RelativeLayout>