<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RootView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:background="@color/background_color"
    android:gravity="clip_vertical" >
    
    <ImageView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/imageView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:scaleType="centerCrop" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/multi_spinner"
        android:hint="@string/name_activities_searchbar"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:textColor="@android:color/primary_text_light" />

    <ListView
        android:id="@+id/excursionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@id/autoCompleteTextView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/ListView_Margin"
        android:divider="#00000000"
        android:dividerHeight="2px"
        android:listSelector="@color/list_background_color"
        android:scrollingCache="false"
        android:cacheColorHint="#00000000" >

    </ListView>
    
   		<View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonDisplayAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/name_button_all_excursions" />

        <Button
            android:id="@+id/buttonDisplayNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/name_button_no_excursions" />


    </LinearLayout>

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="41dip"
            android:layout_height="41dip"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/autoCompleteTextView1"
            android:background="#00000000"
            android:focusable="false"
            android:src="@drawable/ic_input_delete" />

        <net.line2soft.preambul.views.MultiSpinner
            android:id="@+id/multi_spinner"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@+id/excursionList"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

</RelativeLayout>